--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
+#server
+server.port:9080
+#Database
+spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521/xe
+spring.datasource.username=c##zoopiter
+spring.datasource.password=zoopiter1234
 
+#jdbcTemplate sql log
+logging.level.org.springframework.jdbc=debug
+
+#\uBA54\uC138\uC9C0 \uC124\uC815
+spring.messages.basename = messages,errors
