회원가입 DAO 테스트 중

--- a/src/main/resources/errors.properties
+++ b/src/main/resources/errors.properties
@@ -4,7 +4,7 @@
 #\uC5D0\uB7EC\uCF54\uB4DC
 
 #\uD68C\uC6D0
-passwd.joinForm = \uBE44\uBC00\uBC88\uD638\uAC00 \uC77C\uCE58\uD558\uC9C0 \uC54A\uC2B5\uB2C8\uB2E4.!!
+passwd.joinForm = \uBE44\uBC00\uBC88\uD638\uAC00 \uC77C\uCE58\uD558\uC9C0 \uC54A\uC2B5\uB2C8\uB2E4!!
 
 #\uC0C1\uD488
 typeMismatch.quantity = \uC22B\uC790\uB85C \uC785\uB825\uBC14\uB78D\uB2C8\uB2E4.
